# acc-cosc-1337-spring-2019-smar786

./: .travis.yml  CMakeLists.txt  README.md  cpp.hint
01-basics/: basics.cpp  basics.h  main.cpp
01-basics_test/: basics_test.cpp
classwork/: CMakeLists.txt
classwork/02_assign/: assign02.cpp  assign02.h  main.cpp
classwork/03_assign/: loops.cpp  loops.h  main.cpp
classwork/03_assign_tests/: loops_tests.cpp
classwork/classwork_tests/: class_tests.cpp
examples/: CMakeLists.txt
examples/01_module/: CMakeLists.txt
examples/01_module/01_output/: CMakeLists.txt  main.cpp  output.cpp  output.h
examples/01_module/02_variables/: CMakeLists.txt  main.cpp  vars.h
examples/01_module/03_input/: CMakeLists.txt  input.cpp  input.h  main.cpp
examples/01_module/04_expressions/: CMakeLists.txt  expressions.h  main.cpp
examples/01_module/05_if/: CMakeLists.txt  if.cpp  if.h  main.cpp
examples/01_module/06_if_else/: CMakeLists.txt  if_else.cpp  if_else.h  main.cpp
examples/01_module/07_switch/: CMakeLists.txt  main.cpp  switch.cpp  switch.h
examples/01_module_test/: 01_module_test.cpp  CMakeLists.txt
examples/03_module/: CMakeLists.txt
examples/03_module/01_auto/: CMakeLists.txt  main.cpp
examples/03_module/02_while/: CMakeLists.txt  main.cpp  sample_while.cpp  sample_while.h
examples/03_module/03_for/: CMakeLists.txt  main.cpp  sample_for.cpp
examples/03_module/04_do_while/: CMakeLists.txt  sample_do_while.cpp  sample_do_while.h
examples/03_module/05_for_ranged/: CMakeLists.txt  main.cpp  sample_for_ranged.h
examples/03_module/06_value_and_reference_params/: CMakeLists.txt
examples/03_module/07_vectors_intro/: CMakeLists.txt  main.cpp  sample_vectors.cpp  sample_vectors.h
examples/03_module_test/: 03_module_test.cpp  CMakeLists.txt
homework/: CMakeLists.txt
homework/02_decisions/: decisions.cpp  decisions.h  main.cpp
homework/02_decisions_test/: decisions_test.cpp
homework/03_iteration/: dna.cpp  dna.h  main.cpp
homework/03_iteration_test/: iteration_test.cpp
